examples/test/testpolicy16571.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16571
  namespace: namespace101
spec:
  podSelector:
    matchLabels:
      key19: value15
      key3: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value15
          key45: value36
          key0: value16
      podSelector:
        matchLabels:
          key5: value45
          key47: value13
          key16: value15
